Notification and Reminder related change
